@@ -460,6 +460,13 @@ class slist_shared :
     {
         new(push_front_raw()) T(t0,t1,t2,t3,t4);
     }
+    template <class T0,class T1,class T2,class T3,class T4,class T5>
+    inline void push_front(T0 const& t0,T1 const& t1,T2 const& t2,T3 const& t3,T4 const& t4,T5 const& t5)
+    {
+        new(push_front_raw()) T(t0,t1,t2,t3,t4,t5);
+    }
+
+    
     template <class D>
     Node * push_after(Node **&pnext,D const& d,Node *n=0) 
     {
